# rules_python_docker

./: .bazelignore  .gitignore  README.md  WORKSPACE  defs.bzl
examples/: .bazelrc  .gitignore  Justfile  WORKSPACE  pip_compile.sh  requirements.in  requirements_lock.txt
examples/hello_world/: BUILD.bazel  main.py  test.py
examples/hello_world_custom/: BUILD.bazel  lib.py  requirements.in  requirements_lock.txt  test.py
examples/logger/: BUILD.bazel  __init__.py
examples/overrides/: WORKSPACE
examples/overrides/python/: Justfile
examples/overrides/python/psycopg2-binary/: BUILD.bazel
examples/overrides/python/xxhash/: BUILD.bazel
examples/overrides/python/xxhash/xxhash-3.1.0.dist-info/: RECORD
examples/overrides/python/xxhash/xxhash-3.3.0.dist-info/: RECORD
pip/: README.md  defs.bzl
pip/src/: BUILD  piptool.py  whl.py
python/: BUILD  binary.bzl  defs.bzl  entrypoint.sh  image.bzl  internal.bzl  library.bzl  test.bzl
