load("@rules_python_docker//:defs.bzl", "py_image_with_requirements", "py_library", "py_test_with_requirements")

py_image_with_requirements(
    name = "hello_world_custom",
    srcs = ["main.py"],
    base = "@python//image",
    imports = [
        "..",
    ],
    libs = [
        ":lib",
    ],
    main = "main.py",
    pip_import = "pip_hello_world_custom",
    deps = [
        "psycopg2-binary",
        "termcolor",
        "xxhash",
    ],
)

py_library(
    name = "lib",
    srcs = ["lib.py"],
    imports = [
        "..",
    ],
    libs = [
        "//logger:lib",
    ],
)

py_test_with_requirements(
    name = "test",
    srcs = ["test.py"],
    imports = [
        "..",
    ],
    libs = [
        ":lib",
    ],
    pip_import = "pip_hello_world_custom",
    visibility = ["//visibility:public"],
    deps = [
        "termcolor",
        "xxhash",
    ],
)
