py_library(
    name = "psycopg2-binary",
    srcs = glob(
        include = [
            "**/*.py",
        ],
    ),
    data = glob(
        include = [
            "**/*",
        ],
        exclude = [
            "**/*.py",
        ],
    ),
    imports = ["."],
    visibility = ["//visibility:public"],
)
