py_library(
    name = "xxhash",
    srcs = glob(
        include = [
            "**/*.py",
        ],
    ),
    data = glob(
        include = [
            "**/*",
        ],
        exclude = [
            "**/*.py",
        ],
    ),
    imports = ["."],
    visibility = ["//visibility:public"],
)
